# Crusade-AI

./: Cargo.toml  README.md
crusade_ai/: Cargo.toml
crusade_ai/src/: main.rs
crusade_ai_lib/: Cargo.toml
crusader_ai/: Cargo.toml
crusader_ai/src/: main.rs
crusader_extractor/: Cargo.toml
crusader_extractor/src/: main.rs
crusader_gui/src/: index.html  main.js
crusader_gui/src-tauri/: Cargo.toml  tauri.conf.json
crusader_gui/src-tauri/src/: main.rs
crusader_lib/: Cargo.toml
crusader_lib/src/: lib.rs
src/: main.rs
