[package]
name = "crusader_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crusader_lib = { version = "0.1.0", path = "../crusader_lib" }
rusqlite = { version = "0.29.0", features = ["bundled"] }